--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="wrap">
             <div class="profile"></div>
             <h1 class="main">민희</h1>
-            <p class="sub">zhfhrto@naver.com</p>
+            <p class="sub">lmh30428@naver.com</p>
             <a target="_blank" href="https://www.instagram.com/0_alsgml/">인스타그램</a>
             <a target="_blank" href="https://blog.naver.com/zhfhrto">네이버 블로그</a>
             <a target="_blank" href="https://github.com/alsgml12">깃허브</a>
